--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node ./index.js"
+    "test": "jest index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
+  },
+  "devDependencies": {
+    "jest": "^29.0.3"
   }
 }
